# Meta-Hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Readme_Aryan.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  run.sh
docs/: architecture.md
examples/: sample_input.json  sample_output.json
scripts/: validate-submission.sh
server/: app.py  contract_environment.py  contracts.py  graders.py
tests/: test_env.py
